# cg_book_practice

./: README.md
chapter_2/: CMakeLists.txt  README.md  chap2_1_background.cpp  test.cpp
chapter_2/config/: vertShaderTri.glsl  vertShaderTriMoving.glsl
chapter_2/example/: CMakeLists.txt  chap2_1_background.cpp  chap2_2_drawPoint.cpp  chap2_3_detectException.cpp  chap2_4_readShaderSource.cpp  chap2_5_drawTriangle.cpp  chap2_6_triangleMoving.cpp
chapter_2/include/: readShaderSource.h  saveImage.h
chapter_2/src/: CMakeLists.txt  chap2_1_background.cpp  chap2_2_drawPoint.cpp  chap2_3_detectException.cpp  chap2_3_drawTriangle.cpp  chap2_4_readShaderSource.cpp  readShaderSource.cpp  saveImage.cpp
chapter_3/: CMakeLists.txt  README.md
chapter_3/example/: CMakeLists.txt  chap3_1_transformPoint.cpp
chapter_3/include/: transformPose.h
chapter_3/src/: CMakeLists.txt  transformPose.cpp
chapter_4/: CMakeLists.txt  README.md
chapter_4/config/: fragShader.glsl  fragShaderColor.glsl  vertShader.glsl  vertShaderColor.glsl  vertShaderInstance.glsl
chapter_4/example/: CMakeLists.txt  chap4_1_drawCube.cpp  chap4_2_drawCubeColor.cpp  chap4_3_drawCubeRotate.cpp  chap4_4_drawMultipleCubes.cpp  chap4_5_drawMultipleCubesInstance.cpp  chap4_6_drawMultipleGeometries.cpp  chap4_7_drawPlanets.cpp
chapter_4/include/: createShaderProgram.h  exceptionCatch.h  utils.h
chapter_4/src/: CMakeLists.txt  createShaderProgram.cpp  exceptionCatch.cpp  readShaderSource.cpp  utils.cpp
